[FIX]: web-ui: fix virtual table align not working

--- a/packages/web-ui/src/core/VirtualTable/index.less
+++ b/packages/web-ui/src/core/VirtualTable/index.less
@@ -77,7 +77,6 @@
 
                 .table-header {
                     display: flex;
-                    justify-content: center;
                     align-items: center;
                     background-color: #f2f2f2;
                     height: 100%;
@@ -131,7 +130,6 @@
 
                     .table-cell {
                         display: inline-flex;
-                        justify-content: center;
                         align-items: center;
                         background-color: #fff;
                         word-break: break-word;
